# common-agent-swarm-ops

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  adoption.md  common-agent-swarm-ops.code-workspace  init_task.md  package-lock.json  package.json  run_claude.bat  sdd_framework.md  starter.md  status.md  structure.md  task.md
backend/: pyproject.toml
backend/.hypothesis/constants/: 01a221450c59d10c  01e9b004630a4371  046049e40a172f65  0ba5d2c6050cb326  0dd021c32de0e438  0f9ca139d7ffd4b0  0fdc1728a394b858  11584646af876394  11f6f87d4d740832  144e55152c367895  1707add025de64b7  174ad5776d13bda0  1ac6fed6b71f1a43  1cd6920451bed8ee  1f1214394663ebf5  1f31edd0be07d82e  205a7b636d59dfd9  234f5ad24f7bf92b  23f53a8cf7fedc78  273ba6ef681a91b1  27fdd7dba5a8a463  2a638af794639e24  2bc1460960d63d1b  2c5b570955e7a81a  2f17429868c38c8c  31b762a01c22e2d2  32406214fcb3bff0  359cda67261cd6fb  378c466f9a20a3ac  3a923a7e09287f7c  3b03b45c24d1afe0  405cff385f10a73f  4106d945519f6537  423e831c70f37748  434e932c5c772482  476812ecacbe318f  4a918a6dc4649278  50c559832645a918  51cb08e6bf8c9437  5270a3da7d67ebaa  (+76 more)
backend/.hypothesis/tmp/: tmp2zyxay68  tmp3y1p1nse  tmp5iaznk2o  tmpchx1w53v  tmpkphj56ec  tmpmbb92cs1  tmpq1xcgnbw
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  base.py  local.py
backend/app/api/: __init__.py
backend/app/audit/: __init__.py  writer.py
backend/app/core/: __init__.py  boundary.py  decisions.py  errors.py
backend/migrations/: 0001_graph_checkpoints.sql  0002_graph_checkpoint_thread_identity.sql
backend/tests/: __init__.py
(+492 files in other folders)
