[build-system]
requires = ["setuptools==75.8.2"]
build-backend = "setuptools.build_meta"

[project]
name = "generic-swarm-business-os"
version = "0.1.0"
description = "Deterministic, governed FastAPI host foundation"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.115.12",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.131.12",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "ruff==0.11.7",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
files = ["app", "tests"]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true
show_error_codes = true
